<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.AddUsersActivity">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".ui.AddProjectActivity">

        <android.support.design.widget.AppBarLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/AppTheme.PopupOverlay"/>

        </android.support.design.widget.AppBarLayout>


        <ScrollView
                android:id="@+id/main_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F5F5F5"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_horizontal_margin">
                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin">
                    <TextView
                            android:id="@+id/tv_project_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:textColor="@android:color/holo_red_dark"
                            android:text="@string/automatically_project_id_will_be_generated"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin">
                    <EditText
                            android:id="@+id/et_project_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:digits="0123456789AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz "
                            android:inputType="text"
                            android:hint="@string/give_project_name"
                            android:textSize="18sp"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin">
                    <EditText
                            android:id="@+id/et_project_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:inputType="text"
                            android:hint="@string/give_project_location"
                            android:textSize="18sp"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin">
                    <EditText
                            android:id="@+id/et_project_division"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:inputType="text"
                            android:hint="@string/give_work_division"
                            android:textSize="18sp"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin">
                    <EditText
                            android:id="@+id/et_project_mb_no"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:inputType="text"
                            android:hint="@string/give_mb_number"
                            android:textSize="18sp"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin">
                    <EditText
                            android:id="@+id/et_project_head"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:inputType="text"
                            android:hint="@string/give_head"
                            android:textSize="18sp"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin">
                    <EditText
                            android:id="@+id/et_project_main_amount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:inputType="number"
                            android:hint="@string/give_main_amount"
                            android:textSize="18sp"/>
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="#fbfce7"
                        android:padding="@dimen/activity_horizontal_margin">
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:textColor="@android:color/black"
                            android:hint="@string/maintenance_amount_for_5_years"
                            android:textSize="18sp"/>
                    <EditText
                            android:id="@+id/et_project_1st_maintenance"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:layout_margin="4dp"
                            android:inputType="number"
                            android:background="@android:color/white"
                            android:hint="@string/first_year"
                            android:textSize="16sp"/>
                    <EditText
                            android:id="@+id/et_project_2nd_maintenance"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:layout_margin="4dp"
                            android:inputType="number"
                            android:background="@android:color/white"
                            android:hint="@string/second_year"
                            android:textSize="16sp"/>
                    <EditText
                            android:id="@+id/et_project_3rd_maintenance"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:layout_margin="4dp"
                            android:inputType="number"
                            android:background="@android:color/white"
                            android:hint="@string/third_year"
                            android:textSize="16sp"/>
                    <EditText
                            android:id="@+id/et_project_4th_maintenance"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:inputType="number"
                            android:layout_margin="4dp"
                            android:background="@android:color/white"
                            android:hint="@string/fourth_year"
                            android:textSize="16sp"/>
                    <EditText
                            android:id="@+id/et_project_5th_maintenance"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:layout_margin="4dp"
                            android:inputType="number"
                            android:background="@android:color/white"
                            android:hint="@string/fifth_year"
                            android:textSize="16sp"/>

                </LinearLayout>
                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin">
                    <EditText
                            android:id="@+id/et_project_start_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:inputType="date"
                            android:hint="@string/project_start_date"
                            android:textSize="18sp"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin">
                    <EditText
                            android:id="@+id/et_project_end_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:inputType="date"
                            android:hint="@string/project_end_date"
                            android:textSize="18sp"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin">
                    <EditText
                            android:id="@+id/et_remarks"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:inputType="text"
                            android:hint="@string/remark_optional"
                            android:textSize="18sp"/>
                </android.support.design.widget.TextInputLayout>


                <Button
                        android:id="@+id/btn_save"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin"
                        android:textStyle="bold"
                        android:gravity="bottom|center"
                        android:text="@string/save"
                        android:textSize="20sp"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>