<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="ltr"
        android:background="#fafadc"
        android:layout_marginLeft="8dp"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:weightSum="2"
            android:orientation="horizontal">
        <TextView
                android:id="@+id/tv_material"
                android:layout_width="wrap_content"
                android:text="@string/material"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:padding="2dp"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/tv_date"
                android:text="@string/date"
                android:textStyle="bold"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:gravity="right"
                android:padding="2dp"
                android:textSize="14dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:weightSum="2"
            android:orientation="horizontal">
        <TextView
                android:id="@+id/tv_rate_into_quantity"
                android:layout_width="wrap_content"
                android:text="@string/rate"
                android:layout_weight="1"
                android:padding="2dp"
                android:textColor="@android:color/holo_red_dark"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/tv_amount"
                android:text="@string/amount"
                android:layout_gravity="right"
                android:gravity="right"
                android:padding="2dp"
                android:layout_weight="1"
                android:textColor="#122b0f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>


</LinearLayout>